--- a/TODO
+++ b/TODO
@@ -20,5 +20,15 @@ Task
 4. filter (category boyicha, brand boyicha, min_price, max_price [electro, hybrid, gas])
 5. search (car name boyicha)
 6. category, brand malumotlarini fixtures qilib yozib qoyish
+7. kirilchani qoshish
 
-qoyish
+
+categories.json
+python3 manage.py loaddata categories
+
+
+
+static tarjima
+dinamik tarjima
+
+
