--- a/TODO
+++ b/TODO
@@ -33,6 +33,8 @@ https://rentcar.uz/
 
 
 11. sms code yuborishda, qayta qayta yubormaslik kerak
+901001010 -> sms code (1 minute)
+confirm-code -> phone save db
 You have 114 seconds left
 
 
