--- a/TODO
+++ b/TODO
@@ -42,6 +42,22 @@ You have 114 seconds left
 
 13. malumot qoshishda admin bolishi kerak
 
+14. car list apida, brand va rasm qaytarishi kk
+
+15.
+
+apilarni togrilash (yoki register api qoshish)
+GET
+/en/api/v1/rentals/history
+
+GET
+/en/api/v1/user/rentals
+Admin
+
+POST
+/en/api/v1/user/rentals
+
+
 
 901001010-user
 eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzY0MjI0ODAwLCJpYXQiOjE3NjM2MjAwMDAsImp0aSI6IjAyMDlkZTI4NjNlYTRiMTJiMjQwMDczYTMwYjM1Y2M0IiwidXNlcl9pZCI6ImNmODI1NGQ2LTgyMjItNGI5OC04MDc5LWFhNjJmMzNmZTI1NSJ9.MDIl_GUyHdIlIBeMoGwmR4oR7JMI8-XZzsuXe73FBI8
