add extra language

--- a/TODO
+++ b/TODO
@@ -42,8 +42,24 @@ You have 114 seconds left
 
 13. malumot qoshishda admin bolishi kerak
 
+14. car list apida, brand va rasm qaytarishi kk
+
+15.
+
+apilarni togrilash (yoki register api qoshish)
+GET
+/en/api/v1/rentals/history
+
+GET
+/en/api/v1/user/rentals
+Admin
+
+POST
+/en/api/v1/user/rentals
+
+
 
 901001010-user
-eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzY0MjI0ODAwLCJpYXQiOjE3NjM2MjAwMDAsImp0aSI6IjAyMDlkZTI4NjNlYTRiMTJiMjQwMDczYTMwYjM1Y2M0IiwidXNlcl9pZCI6ImNmODI1NGQ2LTgyMjItNGI5OC04MDc5LWFhNjJmMzNmZTI1NSJ9.MDIl_GUyHdIlIBeMoGwmR4oR7JMI8-XZzsuXe73FBI8
+eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzY0ODI0NTczLCJpYXQiOjE3NjQyMTk3NzMsImp0aSI6ImM2MmY4YzUzOTdjMTRlZDE4ZDJiNjA3YWRlMGZkMjBlIiwidXNlcl9pZCI6Ijg1OWYxYzM1LThhZWQtNDg4OC1iMDg3LWU5N2IzMzc2OWY0ZSJ9.nItRmFr62zRizp_0C25ef8PlyDCm1O6XltdDvbchlAY
 
 eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzY0MTQxNDg1LCJpYXQiOjE3NjM1MzY2ODUsImp0aSI6IjE5YWU4YTc2Yzg0YTRmNThiMDk0YjViMTllOGMxN2FhIiwidXNlcl9pZCI6ImZiODEzNmRjLWYzMDUtNGUzYy1hZTFiLTUxY2U2NjU0ZjdkOCJ9.YdW4rfxEq1j7PhgoecWUtKTK_XNcY6Vr5gPUxG1Zjtg
